<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Operar_Area_Cuadrado">

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="499dp"
        android:orientation="vertical"
        android:paddingTop="150dp"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/lblnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/area_rectangulo"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/lado_a"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtladoa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/lado_b"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtladob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/txtaceptar"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:onClick="Aceptar"
                android:text="@string/aceptar"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <Button
                android:id="@+id/txtborrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borrar"
                android:text="@string/Borrar"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
